<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sawsan.ma2tou3.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textView_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/textView_email"
        android:layout_alignEnd="@+id/textView_email" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView_email"
            android:layout_marginTop="52dp"
            android:layout_below="@+id/button_showOnMap"
            android:layout_marginBottom="50dp"
            android:textStyle="normal"
            android:textColor="#212121" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView_phone"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#212121" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView_distance"
        android:textColor="#212121"
        android:layout_alignBottom="@+id/textView_name"
        android:layout_alignLeft="@+id/button_done"
        android:layout_alignStart="@+id/button_done" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/showOnMap"
        android:layout_marginTop="20dp"
        android:id="@+id/button_showOnMap"
        android:background="#212121"
        android:textColor="#FFFFFF"
        android:onClick="showOnMap"
        android:layout_below="@+id/textView_name"
        android:layout_marginLeft="100dp"

       />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/button_done"
        android:textColor="#FFFFFF"
        android:background="#212121"
        android:onClick="done"
        android:layout_toRightOf="@+id/button_call"
        android:layout_below="@+id/textView_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:id="@+id/button_call"
       android:layout_below="@id/textView_phone"
        android:layout_toRightOf="@+id/textView_phone"
        android:layout_marginTop="20dp"
        android:background="#212121"
        android:textColor="#FFFFFF"
        android:onClick="call" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="  km"
        android:id="@+id/textView"
        android:textColor="#000000"
        android:layout_above="@+id/button_showOnMap"
        android:layout_toRightOf="@+id/textView_distance"
        android:layout_toEndOf="@+id/textView_distance" />
</RelativeLayout>
